[gd_scene load_steps=2 format=3 uid="uid://bn5cs57olntk2"]

[ext_resource type="Script" uid="uid://dh8gf0e4g614i" path="res://Scripts/apollo.gd" id="1_80u87"]

[node name="Apollo" type="Node2D"]
script = ExtResource("1_80u87")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 513.0
offset_top = 228.0
offset_right = 563.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Apollo"

[node name="Deck1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deck 1"

[node name="Deck2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deck 2"

[node name="Deck3Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deck 3"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/Deck1Button" to="." method="_on_deck_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Deck2Button" to="." method="_on_deck_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Deck3Button" to="." method="_on_deck_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
